syntax = "proto3";

option csharp_namespace = "Dica56_gRPC";

package orders;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

// The order service definition.
service OrderService {
  // Create a new order
  rpc CreateOrder (CreateOrderRequest) returns (Order);
  
  // Get order by ID
  rpc GetOrder (GetOrderRequest) returns (Order);
  
  // Get orders for a customer
  rpc GetCustomerOrders (GetCustomerOrdersRequest) returns (OrderList);
  
  // Update order status
  rpc UpdateOrderStatus (UpdateOrderStatusRequest) returns (Order);
  
  // Cancel order
  rpc CancelOrder (CancelOrderRequest) returns (google.protobuf.Empty);
  
  // Track order real-time
  rpc TrackOrder (TrackOrderRequest) returns (stream OrderStatus);
}

message Order {
  int32 id = 1;
  int32 customer_id = 2;
  string customer_name = 3;
  string customer_email = 4;
  repeated OrderItem items = 5;
  double total_amount = 6;
  OrderStatusEnum status = 7;
  google.protobuf.Timestamp created_at = 8;
  google.protobuf.Timestamp updated_at = 9;
  string shipping_address = 10;
  string tracking_number = 11;
}

message OrderItem {
  int32 product_id = 1;
  string product_name = 2;
  int32 quantity = 3;
  double unit_price = 4;
  double total_price = 5;
}

message OrderList {
  repeated Order orders = 1;
  int32 total_count = 2;
}

message CreateOrderRequest {
  int32 customer_id = 1;
  string customer_name = 2;
  string customer_email = 3;
  repeated CreateOrderItem items = 4;
  string shipping_address = 5;
}

message CreateOrderItem {
  int32 product_id = 1;
  int32 quantity = 2;
}

message GetOrderRequest {
  int32 id = 1;
}

message GetCustomerOrdersRequest {
  int32 customer_id = 1;
  int32 page = 2;
  int32 page_size = 3;
}

message UpdateOrderStatusRequest {
  int32 id = 1;
  OrderStatusEnum status = 2;
  string tracking_number = 3;
}

message CancelOrderRequest {
  int32 id = 1;
  string reason = 2;
}

message TrackOrderRequest {
  int32 order_id = 1;
}

message OrderStatus {
  int32 order_id = 1;
  OrderStatusEnum status = 2;
  string message = 3;
  string location = 4;
  google.protobuf.Timestamp timestamp = 5;
}

enum OrderStatusEnum {
  PENDING = 0;
  CONFIRMED = 1;
  PROCESSING = 2;
  SHIPPED = 3;
  OUT_FOR_DELIVERY = 4;
  DELIVERED = 5;
  CANCELLED = 6;
  REFUNDED = 7;
}
